--- a/addressbook/templates/pixelegg/app.css
+++ b/addressbook/templates/pixelegg/app.css
@@ -112,6 +112,9 @@ img.iphoto {
 #addressbook-index_org_view {
   margin: 5px;
 }
+.et2_hbox > * {
+  padding-right: 0 !important;
+}
 @media all {
   /* #############################################################################
 // iframe
